fix some display on mobile devices

--- a/src/css/loading-bar.less
+++ b/src/css/loading-bar.less
@@ -3,28 +3,11 @@ body {
     top: 95px;
     height: 5px;
     background-color: #ff0040;
-    @media all and (max-width: 768px){
+    @media all and (max-width: 1024px){
       top: 50px;
     }
   }
   #loading-bar-spinner {
     display: none;
-  //  display: flex;
-  //  justify-content: space-around;
-  //  align-items: center;
-  //  top: 0;
-  //  left: 0;
-  //  width: 100%;
-  //  height: 100%;
-  //
-  //  .spinner-icon {
-  //    width: 100px;
-  //    height: 100px;
-  //    border-width: 10px;
-  //    border-radius: 100px;
-  //    border-top-color: #ff0040;
-  //    border-left-color: #ff0040;
-  //  }
-  //
   }
 }
