--- a/src/css/main.less
+++ b/src/css/main.less
@@ -308,7 +308,7 @@ nav .container, .navbar-brand {
 
 @media screen and (min-height: 320px) {
   .mlink:link, .mlink:active, .mlink:visited, .mlink:hover {
-    font-size: 17px;
+    font-size: 3rem;
     /* padding: 0; */
   }
 }
