--- a/src/scripts/partners/partners.less
+++ b/src/scripts/partners/partners.less
@@ -104,34 +104,59 @@ section#partners-confitura {
     img {
       max-width: 400px;
       max-height: 150px;
+      @media all and (max-width: 767px) {
+        max-width: 250px;
+        max-height: 150px;
+      }
     }
+    @media all and (min-width: 768px){
+      h3{
+        &:before{
+          content: "# ";
+        }
+        &:after{
+          content: " #";
+        }
+      }
+    }
+
   }
   .platinum-type img {
     max-width: 350px;
     max-height: 120px;
+    @media all and (max-width: 767px) {
+      max-width: 250px;
+      max-height: 150px;
+    }
   }
   .gold-type img {
     max-width: 300px;
     max-height: 90px;
+    @media all and (max-width: 767px) {
+      max-width: 250px;
+      max-height: 90px;
+    }
   }
   .silver-type img {
     max-width: 250px;
     max-height: 70px;
+    @media all and (max-width: 767px) {
+      max-width: 250px;
+      max-height: 70px;
+    }
   }
   .partner-description {
     display: block;
     text-shadow: none;
     font-size: 2.5rem;
     padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
   }
 
   .partners-logo-container {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    @media all and (max-width: 768px) {
+    @media all and (max-width: 767px) {
       flex-direction: column;
     }
     a {
